--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -6,7 +6,7 @@
         android:summary="@string/pref_high_quality_desc"/>
     <Preference
         android:key="@string/pref_about_key"
-        android:title="@string/pref_about_title"
+        android:title="@string/pref_about_version"
         android:summary="@string/pref_about_desc"/>
     <Preference
         android:key="@string/lang_key"
